# vedic-reading-engine

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  ONBOARDING_PROMPT.md  README.md  README.zh.md  RULES.md  SETUP.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/skills/india-vedic/: SKILL.md
.claude/skills/india-vedic/: SKILL.md
docs/: INDEX.md
docs/product/: DESIGN-REFERENCE.md  IMPLEMENTATION-BRIEF.md  PRD.md  README.md  SCREEN-SPECS.md  UX-FLOWS.md
profiles/: INDEX.md
profiles/1993-02-04_晴爆爆/: chart.json  input.json  report.md
profiles/1995-07-21_李柏汉_investment/: chart.json  input.json  report.md
profiles/1997-01-04_徐闹闹/: chart.json  input.json  report.md
src/vedic_engine/: __init__.py  api.py  calculator.py  cli.py  constants.py  interpreter.py  llm_client.py  pdf_exporter.py  renderer.py  schemas.py  utils.py
tasks/: ARCHITECTURE.md  BUILD-REPORT.md  DATA-SCHEMA.md  HANDOFF.md  OPEN-SOURCE-RELEASE.md  PRD.md  TASK-PLAN.md  UPGRADE-PLAN.md
templates/: career.md  health.md  investment.md  natal.md  relationship.md  rules.md
tests/: test_calculator.py
tests/fixtures/: sample_birth_1995.json
