[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedic-engine"
version = "0.2.0"
description = "Self-hosted Vedic astrology calculation, SVG rendering, and interpretation API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["vedic-astrology", "jyotish", "swiss-ephemeris", "fastapi", "svg"]
dependencies = [
  "pyswisseph==2.10.3.2",
  "pydantic>=2.7,<3",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "matplotlib>=3.8",
  "svgwrite>=1.4",
  "python-dotenv>=1.0",
  "markdown>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
vedic-calculate = "vedic_engine.cli:main"
vedic-pdf = "vedic_engine.pdf_exporter:pdf_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
